Cambios Elisa [Elisa]

--- a/index.html
+++ b/index.html
@@ -38,22 +38,22 @@
                     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                         <ul class="nav navbar-nav navbar-right">
                             <li class="active">
-                                <a class="text-white" href="C:/Users/Johana/Desktop/JohanaVargas/FlatTheme/index.html">Home</a>
+                                <a class="text-white" href="index.html">Home</a>
                             </li>
                             <li>
-                                <a class="text-white" href="C:/Users/Johana/Desktop/JohanaVargas/FlatTheme/about-us.html">About Us</a>
+                                <a class="text-white" href="about-us.html">About Us</a>
                             </li>
                             <li>
-                                <a class="text-white" href="C:/Users/Johana/Desktop/JohanaVargas/FlatTheme/services.html">Services</a>
+                                <a class="text-white" href="services.html">Services</a>
                             </li>
                             <li>
-                                <a class="text-white" href="C:/Users/Johana/Desktop/JohanaVargas/FlatTheme/portfolio.html">Portfolio</a>
+                                <a class="text-white" href="portfolio.html">Portfolio</a>
                             </li>
                             <li>
-                                <a class="text-white" href="C:/Users/Johana/Desktop/JohanaVargas/FlatTheme/blog.html">Blog</a>
+                                <a class="text-white" href="blog.html">Blog</a>
                             </li>
                             <li>
-                                <a class="text-white" href="C:/Users/Johana/Desktop/JohanaVargas/FlatTheme/contact-us.html">Contact</a>
+                                <a class="text-white" href="contact-us.html">Contact</a>
                             </li>
                         </ul>
                     </div>
@@ -119,15 +119,15 @@
                 </div>
                 <div class="col-md-9 col-xs-12 pd-6">
                     <div class="col-md-4 col-xs-4 bg-images1">
-                        <img class="imgport" src="C:/Users/Johana/Desktop/JohanaVargas/FlatTheme/images/portfolio/recent/item1.png">
+                        <img class="imgport" src="images/portfolio/recent/item1.png">
                         <h5 class="text-oxford">Nova Corporate site template</h5>
                     </div>
                     <div class="col-md-4 col-xs-4 bg-images1">
-                        <img class="imgport" src="C:/Users/Johana/Desktop/JohanaVargas/FlatTheme/images/portfolio/recent/item3.png">
+                        <img class="imgport" src="images/portfolio/recent/item3.png">
                         <h5 class="text-oxford">Fornar-Apps site template</h5>
                     </div>
                     <div class="col-md-4 col-xs-4 bg-images1">
-                        <img class="imgport" src="C:/Users/Johana/Desktop/JohanaVargas/FlatTheme/images/portfolio/recent/item2.png">
+                        <img class="imgport" src="images/portfolio/recent/item2.png">
                         <h5 class="text-oxford">Flat Theme Business Theme</h5>
                     </div>
                 </div>
@@ -228,8 +228,8 @@
                             <nav>
                                 <ul>
                                     <li><a class="text-white text-trans" href="#top-page"><i class="fa fa-chevron-up"></i></a></li>
-                                    <li><a class="text-white text-trans" href="C:/Users/Johana/Desktop/JohanaVargas/FlatTheme/about-us.html">About Us</a></li>
-                                    <li><a class="text-white text-trans" href="C:/Users/Johana/Desktop/JohanaVargas/FlatTheme/index.html">Home</a></li>
+                                    <li><a class="text-white text-trans" href="about-us.html">About Us</a></li>
+                                    <li><a class="text-white text-trans" href="index.html">Home</a></li>
                                 </ul>
                             </nav>
                         </div>
