--- a/portfolio.html
+++ b/portfolio.html
@@ -23,8 +23,7 @@
 </head><!--/head-->
 <body>
     <header>
-<!--MENÚ PRINCIPAL-->
-        <section id="top-page">
+<section id="top-page">
             <nav class="navbar-default bg-marino ">
                 <div class="container container-fluid">
                     <div class="navbar-header btn-burger ">
@@ -38,22 +37,22 @@
                     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                         <ul class="nav navbar-nav navbar-right">
                             <li>
-                                <a class="text-white" href="C:/Users/Johana/Desktop/JohanaVargas/FlatTheme/index.html">Home</a>
+                                <a class="text-white" href="index.html">Home</a>
                             </li>
                             <li>
-                                <a class="text-white" href="C:/Users/Johana/Desktop/JohanaVargas/FlatTheme/about-us.html">About Us</a>
+                                <a class="text-white" href="about-us.html">About Us</a>
                             </li>
                             <li>
-                                <a class="text-white" href="C:/Users/Johana/Desktop/JohanaVargas/FlatTheme/services.html">Services</a>
+                                <a class="text-white" href="services.html">Services</a>
                             </li>
                             <li class="active">
-                                <a class="text-white" href="C:/Users/Johana/Desktop/JohanaVargas/FlatTheme/portfolio.html">Portfolio</a>
+                                <a class="text-white" href="portfolio.html">Portfolio</a>
                             </li>
                             <li>
-                                <a class="text-white" href="C:/Users/Johana/Desktop/JohanaVargas/FlatTheme/blog.html">Blog</a>
+                                <a class="text-white" href="blog.html">Blog</a>
                             </li>
                             <li>
-                                <a class="text-white" href="C:/Users/Johana/Desktop/JohanaVargas/FlatTheme/contact-us.html">Contact</a>
+                                <a class="text-white" href="contact-us.html">Contact</a>
                             </li>
                         </ul>
                     </div>
@@ -72,13 +71,13 @@
                         <nav>
                             <ul class="text-right">
                                 <li>
-                                    <a class="text-white text-trans" href="C:/Users/Johana/Desktop/JohanaVargas/FlatTheme/contact-us.html">Contact Us</a>
+                                    <a class="text-white text-trans" href="contact-us.html">Contact Us</a>
                                 </li>
                                 <li class="text-white">
                                     /
                                 </li>
                                 <li>
-                                    <a class="text-white" href="C:/Users/Johana/Desktop/JohanaVargas/FlatTheme/index.html">Home</a>
+                                    <a class="text-white" href="index.html">Home</a>
                                 </li>
                             </ul>
                         </nav>
@@ -92,15 +91,15 @@
             <div class="row">
                 <div class="col-md-12 col-xs-12">
                     <div class="col-md-4 col-xs-4 bg-images ">
-                        <img class="imgport" src="C:/Users/Johana/Desktop/JohanaVargas/FlatTheme/images/portfolio/thumb/item1.jpg">
+                        <img class="imgport" src="images/portfolio/thumb/item1.jpg">
                         <h4 class="text-marino pd-2">Lorem ipsum dolor sit amet</h4>
                     </div>
                     <div class="col-md-4 col-xs-4 bg-images ">
-                        <img class="imgport" src="C:/Users/Johana/Desktop/JohanaVargas/FlatTheme/images/portfolio/thumb/item2.jpg">
+                        <img class="imgport" src="images/portfolio/thumb/item2.jpg">
                         <h4 class="text-marino pd-2">Lorem ipsum dolor sit amet</h4>
                     </div>
                     <div class="col-md-4 col-xs-4 bg-images ">
-                        <img class="imgport" src="C:/Users/Johana/Desktop/JohanaVargas/FlatTheme/images/portfolio/thumb/item3.jpg">
+                        <img class="imgport" src="images/portfolio/thumb/item3.jpg">
                         <h4 class="text-marino pd-2">Lorem ipsum dolor sit amet</h4>
                     </div>
                 </div>
@@ -108,15 +107,15 @@
             <div class="row">
                 <div class="col-md-12 col-xs-12">
                     <div class="col-md-4 col-xs-4 bg-images ">
-                        <img class="imgport" src="C:/Users/Johana/Desktop/JohanaVargas/FlatTheme/images/portfolio/thumb/item4.jpg">
+                        <img class="imgport" src="images/portfolio/thumb/item4.jpg">
                         <h4 class="text-marino pd-2">Lorem ipsum dolor sit amet</h4>
                     </div>
                     <div class="col-md-4 col-xs-4 bg-images ">
-                        <img class="imgport" src="C:/Users/Johana/Desktop/JohanaVargas/FlatTheme/images/portfolio/thumb/item5.jpg">
+                        <img class="imgport" src="images/portfolio/thumb/item5.jpg">
                         <h4 class="text-marino pd-2">Lorem ipsum dolor sit amet</h4>
                     </div>
                     <div class="col-md-4 col-xs-4 bg-images ">
-                        <img class="imgport" src="C:/Users/Johana/Desktop/JohanaVargas/FlatTheme/images/portfolio/thumb/item6.jpg">
+                        <img class="imgport" src="images/portfolio/thumb/item6.jpg">
                         <h4 class="text-marino pd-2">Lorem ipsum dolor sit amet</h4>
                     </div>
                 </div>
@@ -187,8 +186,8 @@
                             <nav>
                                 <ul>
                                     <li><a class="text-white text-trans" href="#top-page"><i class="fa fa-chevron-up"></i></a></li>
-                                    <li><a class="text-white text-trans" href="C:/Users/Johana/Desktop/JohanaVargas/FlatTheme/about-us.html">About Us</a></li>
-                                    <li><a class="text-white text-trans" href="C:/Users/Johana/Desktop/JohanaVargas/FlatTheme/index.html">Home</a></li>
+                                    <li><a class="text-white text-trans" href="about-us.html">About Us</a></li>
+                                    <li><a class="text-white text-trans" href="index.html">Home</a></li>
                                 </ul>
                             </nav>
                         </div>
