--- a/about-us.html
+++ b/about-us.html
@@ -20,9 +20,284 @@
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/ico/apple-touch-icon-72-precomposed.png">
     <link rel="apple-touch-icon-precomposed" href="images/ico/apple-touch-icon-57-precomposed.png">
 </head><!--/head-->
-<body>
-    <!-- Inserte código aqui -->
-
+<!--  HECHO POR ELISA -->
+    <body>
+    <header>
+    <!--MENÚ PRINCIPAL-->
+        <section id="top-page">
+            <nav class="navbar-default bg-marino ">
+                <div class="container container-fluid">
+                    <div class="navbar-header btn-burger ">
+                        <button class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
+                        <a class="navbar-brand page-scroll text-white" href="#page-top"><img src="images/logo.png"></a>
+                    </div>
+                    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                        <ul class="nav navbar-nav navbar-right">
+                            <li class="li1">
+                                <a class="text-white" href="index.html">Home</a>
+                            </li>
+                            <li class="active">
+                                <a class="text-white" href="about-us.html">About Us</a>
+                            </li>
+                            <li>
+                                <a class="text-white" href="services.html">Services</a>
+                            </li>
+                            <li>
+                                <a class="text-white" href="portfolio.html">Portfolio</a>
+                            </li>
+                            <li>
+                                <a class="text-white" href="blog.html">Blog</a>
+                            </li>
+                            <li>
+                                <a class="text-white" href="contact-us.html">Contact</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+        </section>       
+    </header>
+    <!-- ABOUT US -->
+    <section class="bg-verde">
+            <div class="container pd-2">
+                <div class="row">
+                    <div class="col-md-8 col-xs-12 text-white">
+                        <h2>Contact Us</h2>
+                        <p>Pellentesque habitant morbi tristique senectus et netus et malesuada</p>
+                    </div>
+                    <div class="col-md-4 col-xs-12 pd-2">
+                        <nav>
+                            <ul class="text-right">
+                                <li>
+                                    <a class="text-white text-trans" href="contact-us.html">Contact Us</a>
+                                </li>
+                                <li class="text-white">
+                                    /
+                                </li>
+                                <li>
+                                    <a class="text-white" href="index.html">Home</a>
+                                </li>
+                            </ul>
+                        </nav>
+                    </div>
+                </div>
+            </div>
+        </section>     
+    <!-- What we are? / Our Skills -->
+    <section>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 col-xs-12">
+                    <h2>What we are?</h2>
+                    <p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque nihil possimus quia reprehenderit libero, unde fuga fugiat nam aperiam optio, esse quae eveniet, ex odit facere qui! Nisi, totam, cupiditate! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id dolor nam distinctio odit animi, quasi tenetur, libero neque debitis pariatur adipisci praesentium corporis vero labore ut voluptatem omnis quisquam excepturi.</p>
+                </div>
+                <div class="col-md-6 col-xs-12">
+                    <h2>Our skills</h2>
+                    <div class="progress">
+                        <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 90%">
+                        HTML / CSS
+                        </div>
+                    </div>
+                    <div class="progress">
+                        <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 70%">
+                        Wordpress
+                        </div>
+                    </div>
+                    <div class="progress">
+                        <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 50%">
+                        Jomia
+                        </div>
+                    </div>
+                    <div class="progress">
+                        <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
+                        Drupal
+                        </div>
+                    </div>
+                    <div class="progress">
+                        <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
+                        PHP
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- The team -->
+    <section id="team">
+        <div class="container">
+            <div class="col-md-12 col-xs-12">
+                <h2 class="text-center">Meet the Team</h2>
+                <p class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+            </div>
+            <div class="col-md-3 col-xs-6 text-center">
+                <img class="perfil" src="images/team-member.jpg" alt="">
+                <p>David J. Robins</p>
+                <p class="cargo">Senior Vice President</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                <span class="icon-stack facebook">
+                    <i class="icon-circle icon-stack-base"></i>
+                    <i class="icon-facebook icon-light"></i>
+                </span> 
+                <span class="icon-stack google-plus">
+                    <i class="icon-circle icon-stack-base"></i>
+                    <i class="icon-google-plus icon-light"></i>
+                </span> 
+                <span class="icon-stack twitter">
+                    <i class="icon-circle icon-stack-base"></i>
+                    <i class="icon-twitter icon-light"></i>
+                </span> 
+                <span class="icon-stack linkedin">
+                    <i class="icon-circle icon-stack-base"></i>
+                    <i class="icon-linkedin icon-light"></i>
+                </span> 
+            </div>
+            <div class="col-md-3 col-xs-6 text-center">
+                <img class="perfil" src="images/team-member.jpg" alt="">
+                <p>David J. Robins</p>
+                <p class="cargo">Senior Vice President</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                <span class="icon-stack facebook">
+                    <i class="icon-circle icon-stack-base"></i>
+                    <i class="icon-facebook icon-light"></i>
+                </span> 
+                <span class="icon-stack google-plus">
+                    <i class="icon-circle icon-stack-base"></i>
+                    <i class="icon-google-plus icon-light"></i>
+                </span> 
+                <span class="icon-stack twitter">
+                    <i class="icon-circle icon-stack-base"></i>
+                    <i class="icon-twitter icon-light"></i>
+                </span> 
+                <span class="icon-stack linkedin">
+                    <i class="icon-circle icon-stack-base"></i>
+                    <i class="icon-linkedin icon-light"></i>
+                </span> 
+            </div>
+            <div class="col-md-3 col-xs-6 text-center">
+                <img class="perfil" src="images/team-member.jpg" alt="">
+                <p>David J. Robins</p>
+                <p class="cargo">Senior Vice President</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                <span class="icon-stack facebook">
+                    <i class="icon-circle icon-stack-base"></i>
+                    <i class="icon-facebook icon-light"></i>
+                </span> 
+                <span class="icon-stack google-plus">
+                    <i class="icon-circle icon-stack-base"></i>
+                    <i class="icon-google-plus icon-light"></i>
+                </span> 
+                <span class="icon-stack twitter">
+                    <i class="icon-circle icon-stack-base"></i>
+                    <i class="icon-twitter icon-light"></i>
+                </span> 
+                <span class="icon-stack linkedin">
+                    <i class="icon-circle icon-stack-base"></i>
+                    <i class="icon-linkedin icon-light"></i>
+                </span> 
+            </div>
+            <div class="col-md-3 col-xs-6 text-center">
+                <img class="perfil" src="images/team-member.jpg" alt="">
+                <p>David J. Robins</p>
+                <p class="cargo">Senior Vice President</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                <span class="icon-stack facebook">
+                    <i class="icon-circle icon-stack-base"></i>
+                    <i class="icon-facebook icon-light"></i>
+                </span> 
+                <span class="icon-stack google-plus">
+                    <i class="icon-circle icon-stack-base"></i>
+                    <i class="icon-google-plus icon-light"></i>
+                </span> 
+                <span class="icon-stack twitter">
+                    <i class="icon-circle icon-stack-base"></i>
+                    <i class="icon-twitter icon-light"></i>
+                </span> 
+                <span class="icon-stack linkedin">
+                    <i class="icon-circle icon-stack-base"></i>
+                    <i class="icon-linkedin icon-light"></i>
+                </span> 
+            </div>
+        </div>
+    </section>
+    <!-- Footer -->
+     <footer>
+        <section class="bg-marino1 pd-5">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12 col-xs-12 mg-5">
+                      <div class="col-md-3 col-xs-12">
+                          <h4 class="text-white">About Us</h4>
+                          <p class="text-white text-trans">Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.  Vestibulum tortor quam,  feugiat vitae,  ultricies t,  tempor sit amet,  ante. </p>
+                          <p class="text-white text-trans">Pellentesque habitant morbi tristique senectus</p>
+                      </div> 
+                      <div class="col-md-2 col-xs-12">
+                          <h4 class="text-white">Company</h4>
+                            <ul class="text-white text-trans">
+                                <li>> The Company </li>
+                                <li>> Our Team </li>
+                                <li>> Our Partners</li>
+                                <li>> Our Services </li>
+                                <li>> Faq </li>
+                                <li>> Conatct Us </li>
+                                <li>> Privacy Policy </li>
+                                <li>> Terms of Use </li>
+                                <li>> Copyright</li>
+                            </ul>
+                      </div>
+                      <div class="col-md-1 hidden-xs"></div>
+                      <div class="col-md-3 col-xs-12">
+                        <h4 class="text-white">Latest Blog</h4>
+                          <div class="col-md-4 col-xs-3 ">
+                              <img class="img-blog-foot" src="images/blog/thumb1.jpg">
+                              <img class="img-blog-foot" src="images/blog/thumb2.jpg">
+                              <img class="img-blog-foot" src="images/blog/thumb3.jpg">
+                          </div>
+                          <div class="col-xs-1"></div>
+                          <div class="col-md-8  col-xs-8">
+                              <p class="text-white small-txt text-trans">Pellentesque habitant morbi tristique senectus Posted <br>  17 Aug 2013 </p>
+                              <p class="text-white small-txt text-trans">Pellentesque habitant morbi tristique senectus Posted <br>  13 sep 2013 </p>
+                              <p class="text-white small-txt text-trans">Pellentesque habitant morbi tristique senectus Posted <br> 11 Jul 2013</p>
+                          </div>
+                      </div>
+                      <div class="col-md-3 col-xs-12">
+                        <h4 class="text-white">Address</h4>
+                        <p class="text-white">Twitter,<span class="text-trans"><br>  Inc.  795 Folsom Ave,  Suite 600 <br> San Francisco,  CA 94107 <br> P: (123)  456-7890</span></p>
+                        <h4 class="text-white">Newsletter</h4>
+                        <div class="input-group">
+                            <input type="text" class="form-control" placeholder="Enter your email">
+                            <span class="input-group-addon text-white">Go!</span>
+                        </div>
+                      </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="bg-marino pd-2 footerfin">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12 col-xs-12">
+                        <div class="col-md-4 col-xs-6">
+                            <p class="text-white text-trans pd-2">© 2013 ShapeBootstrap.  All Rights Reserved.</p>
+                        </div>
+                        <div class="col-md-4 hidden-xs"></div>
+                        <div class="col-md-4 col-xs-6">
+                            <nav>
+                                <ul>
+                                    <li><a class="text-white text-trans" href="#top-page"><i class="fa fa-chevron-up"></i></a></li>
+                                    <li><a class="text-white text-trans" href="C:/Users/Johana/Desktop/JohanaVargas/FlatTheme/about-us.html">About Us</a></li>
+                                    <li><a class="text-white text-trans" href="C:/Users/Johana/Desktop/JohanaVargas/FlatTheme/index.html">Home</a></li>
+                                </ul>
+                            </nav>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </footer>
     <script src="js/jquery.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/main.js"></script>
