--- a/contact-us.html
+++ b/contact-us.html
@@ -39,22 +39,22 @@
                     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                         <ul class="nav navbar-nav navbar-right">
                             <li>
-                                <a class="text-white" href="C:/Users/Johana/Desktop/JohanaVargas/FlatTheme/index.html">Home</a>
+                                <a class="text-white" href="index.html">Home</a>
                             </li>
                             <li>
-                                <a class="text-white" href="C:/Users/Johana/Desktop/JohanaVargas/FlatTheme/about-us.html">About Us</a>
+                                <a class="text-white" href="about-us.html">About Us</a>
                             </li>
                             <li>
-                                <a class="text-white" href="C:/Users/Johana/Desktop/JohanaVargas/FlatTheme/services.html">Services</a>
+                                <a class="text-white" href="services.html">Services</a>
                             </li>
                             <li>
-                                <a class="text-white" href="C:/Users/Johana/Desktop/JohanaVargas/FlatTheme/portfolio.html">Portfolio</a>
+                                <a class="text-white" href="portfolio.html">Portfolio</a>
                             </li>
                             <li>
-                                <a class="text-white" href="C:/Users/Johana/Desktop/JohanaVargas/FlatTheme/blog.html">Blog</a>
+                                <a class="text-white" href="blog.html">Blog</a>
                             </li>
                             <li class="active">
-                                <a class="text-white" href="C:/Users/Johana/Desktop/JohanaVargas/FlatTheme/contact-us.html">Contact</a>
+                                <a class="text-white" href="contact-us.html">Contact</a>
                             </li>
                         </ul>
                     </div>
@@ -73,13 +73,13 @@
                         <nav>
                             <ul class="text-right">
                                 <li>
-                                    <a class="text-white text-trans" href="C:/Users/Johana/Desktop/JohanaVargas/FlatTheme/contact-us.html">Contact Us</a>
+                                    <a class="text-white text-trans" href="contact-us.html">Contact Us</a>
                                 </li>
                                 <li class="text-white">
                                     /
                                 </li>
                                 <li>
-                                    <a class="text-white" href="C:/Users/Johana/Desktop/JohanaVargas/FlatTheme/index.html">Home</a>
+                                    <a class="text-white" href="index.html">Home</a>
                                 </li>
                             </ul>
                         </nav>
@@ -175,7 +175,7 @@
                                 <ul>
                                     <li><a class="text-white text-trans" href="#top-page"><i class="fa fa-chevron-up"></i></a></li>
                                     <li><a class="text-white text-trans" href="C:/Users/Johana/Desktop/JohanaVargas/FlatTheme/about-us.html">About Us</a></li>
-                                    <li><a class="text-white text-trans" href="C:/Users/Johana/Desktop/JohanaVargas/FlatTheme/index.html">Home</a></li>
+                                    <li><a class="text-white text-trans" href="index.html">Home</a></li>
                                 </ul>
                             </nav>
                         </div>
