--- a/contact-us.html
+++ b/contact-us.html
@@ -92,7 +92,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12 col-xs-12">
-                    <div class="col-md-4 col-xs-12">
+                    <div class="col-md-4 col-xs-12 btn-red">
                         <h3 class="text-marino">Contact Form</h3>
                         <input placeholder="First Name" class="form"></input>
                         <input placeholder="Last Name" class="form"></input>
