--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     <section class="bg-gray">
         <div class="container pd-2">
             <div class="row">
-                <div class="col-md-3 col-xs-12">
+                <div class="col-md-3 col-xs-12 btn-red">
                     <h3 class="text-oxford">Our Latest Project</h3>
                     <p class="text-oxford">Our Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.</p>
                     <div class="btn-group">
